--- a/Download_reading_cleaning.Rmd
+++ b/Download_reading_cleaning.Rmd
@@ -29,24 +29,31 @@ library(ggplot2)
 
 # Motivation---Tim
 
-write
+This year, a report from Centers for Disease Control and Prevention revealed that America’s obesity rate has reached a record high. Contrasting to popular belief, New Yorkers are not so safe from the obesity epidemic, as more than half of adult New Yorkers are either overweight or obese. Studies show that the rise in the obesity epidemic is partly due to disparities in food environment; it is harder for some to eat healthier because their options are limited. This project intends to look deeper into the relationship between food environment in NYC and obesity rate along with diabetes rate and stroke hospitalization rate.
+
 
 # Related Work---Tim
 
-write
-
+In 2008, aggregating Google search queries, Google attempted to make accurate predictions about flu activity. Then what kind of infomation on the internet that can predict the prevelence of chronic disease such as obesity, diabetes or cancer?  
+Another inspiration is that, I and my fellow classamate often go out to restaurants that are near our home for convenience, even though these restaurants were not healthy. Environment can affect some health behaviours imperceptibly。
+ 
 # Initial questions---Tim
 
-write
+1. Can the percentage of certain fast-food restaurant be related to obesity, diabetes and stroke rate in different neighborhoods of NYC ? 2. Can the percentage of health inspection grade A restaurant be related to obesity, diabetes and stroke rate in different neighborhoods of NYC? 3. Can the composite restaurant health score of each neighborhood be related to chronic disease rate?  
+For the first two questions, we stick to it. For the third question, we change the main predictor to percentage of fast food cuisine type since it was easy to acquire in the data. Composite restaurant health score were to subjective and difficult to assess. Moreover, we calculated the boro level model first due to the difficulties we encountered in scaping zipcode-neighborhood data. However, after some struggle, we still managed to get the neighborhood information and analyze the data accordingly.
 
 # Data and Methods
 
 ## Data Source and Collection---Tim
 
-write
+1. NYC restaurant inspection:
+https://data.cityofnewyork.us/Health/DOHMH-New-York-City-Restaurant-Inspection-Results/43nn-pn8j  
+2. 2015 Community Health Profiles Open Data: https://www1.nyc.gov/site/doh/data/data-publications/profiles.page
+  
+These data were rather easy to acquire, since they can be downloaded by CSV format. Because health and demographic data are grouped by neighborhood but the restaurant inspection data was using zipcodes. We had to match the zipcode and neighborhood name in order to merge the datasets which was the hardest. First, we scraped the table data from https://www.health.ny.gov/statistics/cancer/registry/appendix/neighborhoods.htm. However the neighborhood name and combinations were different from the health profile data we downloaded. We cannot merge the two datasets. Then we tried to look for the raw classification for the neigborhoods in health data from New York University's Furman Center for Real Estate and Urban Policy and the NYC Department of City Planning. However, still no luck becuase the neighborhood was not divided by zipcode areas. Then we tried the hardest way: search the name of the neighborhood on Google and finding the matching zipcodes. It worked out well, but it was not precise, thus we left out some of the restaurants without a matching neighborhood name.
 
 ## Data Import and Cleaning---Tim
-
+Downloading restaurant inspection data from NYC open data
 ```{r reading the New York Inspection data}
 get_all_inspections = function(url) {
   
@@ -84,6 +91,7 @@ rest_inspection = get_all_inspections(url) %>%
   bind_rows() 
 ```
 
+Downloading health and demographic data CSV into local folder and reading, cleaning it
 ```{r reading and cleaning the health indicator data}
 download.file("https://www1.nyc.gov/assets/doh/downloads/excel/episrv/2015_CHP_PUD.xlsx", mode="wb", destfile = "health.xlsx")
 health <- read_excel("health.xlsx", sheet = "CHP_all_data") %>% 
@@ -97,6 +105,7 @@ health <- read_excel("health.xlsx", sheet = "CHP_all_data") %>%
   
 ```
 
+Matching the neighborhood names with restaurant zipcodes
 ```{r merging the neighborhood data with restaurant data}
 zip_neighbor <- read_csv("neigh_zipcode.csv") %>% 
   mutate(zipcode = as.character(zipcode))
@@ -144,7 +153,7 @@ health_only_neighborhood <- health[-c(1:6),] %>%
   mutate(neighborhood = as.factor(neighborhood))
 ##Plotting for outcome in different neighborhood
 
-###Williamsbridge and Baychester have the highest obesity rate, up to 32%
+
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, obesity)) %>% 
   filter(obesity > 25) %>% 
@@ -153,7 +162,7 @@ health_only_neighborhood %>%
   theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
   labs(title = "Neighborhood with 25 percent more obesity rate")
 
-###East New York and Starrett City have the highest diabetes rate, up to 17 percent
+
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, diabetes)) %>% 
   filter(diabetes > 10) %>% 
@@ -162,7 +171,7 @@ health_only_neighborhood %>%
   theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
   labs(title = "Neighborhood with 10 percent more diabetes rate")
 
-###BUshwick has the highest stroke hospitalization in 100,000 adults, up to 300 adults
+
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, stroke_hosp)) %>% 
   filter(stroke_hosp > 300) %>% 
@@ -175,7 +184,7 @@ health_only_neighborhood %>%
 
 ##Plotting for some adjusted variables
 
-###Morrisania and Crotona has the highest percent of poverty rate, up to 40%
+
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, poverty)) %>% 
   filter(poverty > 20) %>% 
@@ -184,7 +193,7 @@ health_only_neighborhood %>%
   theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
   labs(title = "Neighborhood with 20 percent or more poverty")
 
-###Fiancial district has the highest percent of young peoeple, up to 67%
+
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, age0to44_rate)) %>% 
   filter(age0to44_rate > 60) %>% 
@@ -195,6 +204,7 @@ health_only_neighborhood %>%
 
 
 ```
+**Summary: Williamsbridge and Baychester have the highest obesity rate, up to 32%. East New York and Starrett City have the highest diabetes rate, up to 17 percent. BUshwick has the highest stroke hospitalization in 100,000 adults, up to 300 adults. Morrisania and Crotona has the highest percent of poverty rate, up to 40%. Fiancial district has the highest percent of young peoeple, up to 67%.**
 
 ## Restaurant data
 
