--- a/Download_reading_cleaning.Rmd
+++ b/Download_reading_cleaning.Rmd
@@ -22,7 +22,6 @@ library(forcats)
 library(jsonlite)
 library(viridis)
 library(plotly)
-library(Rmisc)
 library(ggplot2)
 ```
 
@@ -392,6 +391,7 @@ nyc_chain %>%
 # Next is calculating the percentage of chain restaurants in each boro.
 
 # counting chains in boro
+
 count_chain = nyc_chain %>%
   group_by(boro) %>%
   summarise(chain_n = n())
@@ -408,7 +408,7 @@ percent_chain = left_join(count_chain, count_rest) %>%
 
 ### Inspection Grade---Austin 
 
-```{r grade_percentage}
+```{r grade_percentage for boro}
 data =
   rest_inspection %>%
   group_by(boro, grade) %>%
@@ -417,6 +417,30 @@ data =
   filter(grade == "A")
 ```
 
+```{r plot for boro}
+data %>% 
+  mutate(boro = as.factor(boro),
+         boro = fct_reorder(boro,grade_percent)) %>% 
+  plot_ly(x = ~boro, y = ~grade_percent, color = ~boro, type = "bar")
+```
+
+
+```{r r grade_percentage for boro}
+data1 =
+  rest_neighborhood %>%
+  group_by(neighborhood, grade) %>%
+  summarise(n = n()) %>%
+  mutate(grade_percent = n / sum(n)) %>% 
+  filter(grade == "A") %>% 
+  top_n(15)
+```
+
+```{r plot for neighborhood}
+data1 %>% 
+  mutate(neighborhood = as.factor(neighborhood),
+         neighborhood = fct_reorder(neighborhood,grade_percent)) %>% 
+  plot_ly(x = ~neighborhood, y = ~grade_percent, color = ~neighborhood, type = "bar")
+```
 
 # Formal Analysis and Findings
 
@@ -494,31 +518,31 @@ lm_sum(health_chain_join$stroke_hosp)
 
 ### Inspection Grade---Austin
 
-```{r}
+```{r combine the health data with the grade_percentage by boro}
 combined = 
   left_join(data, health_boro, by = "boro") %>% 
   filter(boro!="Missing")
-
-# First, combine the data which we substract from the data of each borough of our "health" data with the dataset which shows the percentage of "grade-A" restaurants in each borough. Then we acquire the final dataset we can do the linear regression between obesity, diabetes and stroke with the percentage of "grade-A" restaurants, which we treat as a represent of the healthy restaurants in that borough.
-
+```
+First, combine the data which we substract from the data of each borough of our "health" data with the dataset which shows the percentage of "grade-A" restaurants in each borough. Then we acquire the final dataset we can do the linear regression between obesity, diabetes and stroke with the percentage of "grade-A" restaurants, which we treat as a represent of the healthy restaurants in that borough.
+```{r do the linear regression between obesity and grade_percent for boro}
 reg1 <- lm(obesity ~ grade_percent, data = combined )
 summary(reg1)
 broom::tidy(reg1)
-
-# p-value is way much higher than 0.05, fail to reject the null, meaning that there is no linear association between the obesity and the percentage of grade A restaurant in each borough.
-
+```
+p-value is way much higher than 0.05, fail to reject the null, meaning that there is no linear association between the obesity and the percentage of grade A restaurant in each borough.
+```{r do the linear regression between diabetes and grade_percent for boro}
 reg2 <- lm(diabetes ~ grade_percent, data = combined )
 summary(reg2)
 broom::tidy(reg2)
-
-# p-value is way much higher than 0.05, fail to reject the null, meaning that there is no linear association between the diabetes and the percentage of grade A restaurant in each borough.
-
+```
+p-value is way much higher than 0.05, fail to reject the null, meaning that there is no linear association between the diabetes and the percentage of grade A restaurant in each borough.
+```{r do the linear regression between stroke and grade_percent for boro}
 reg3 <- lm(stroke_hosp ~ grade_percent, data = combined )
 summary(reg3)
 broom::tidy(reg3)
-
-# p-value is way much higher than 0.05, fail to reject the null, meaning that there is no linear association between the stroke and the percentage of grade A restaurant in each borough.  
-# According to the three linear regression analysis above, we can conclude that there is no linear relationship between obesity, diabetes and stroke with the "grade-A" restaurants in each borough.
+```
+p-value is way much higher than 0.05, fail to reject the null, meaning that there is no linear association between the stroke and the percentage of grade A restaurant in each borough.  
+According to the three linear regression analysis above, we can conclude that there is no linear relationship between obesity, diabetes and stroke with the "grade-A" restaurants in each borough.
 ```
 
 
@@ -556,7 +580,9 @@ lm(stroke_hosp ~ percent_fastfood + racewhite_rate + age0to44_rate + poverty + s
 ### Inspection Grade---Austin
 
 ```{r Inspection_Grade_neighborhood}
-
+combined1 = 
+  left_join(data1, health_neighborhood, by = "neighborhood") %>% 
+  filter(neighborhood!="Missing")
 ```
 
 # Conclusion---to do later 
@@ -613,3 +639,5 @@ percent_healthyfood = function(name_boro){
 map(name_boro, percent_healthyfood) %>%
   bind_rows()
 ```
+
+
