--- a/Download_reading_cleaning.Rmd
+++ b/Download_reading_cleaning.Rmd
@@ -156,27 +156,28 @@ health_only_neighborhood <- health[-c(1:6),] %>%
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, obesity)) %>% 
   filter(obesity > 25) %>% 
-  ggplot(aes(x = neighborhood,y = obesity)) + geom_col() +  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   ggplot(aes(x = neighborhood,y = obesity, fill = neighborhood)) + geom_col() +  
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1), 
+        legend.position = "none") +
   labs(title = "Neighborhood with 25 percent more obesity rate")
 
 
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, diabetes)) %>% 
   filter(diabetes > 10) %>% 
-  ggplot(aes(x = neighborhood,y = diabetes)) + geom_col() +  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  ggplot(aes(x = neighborhood,y = diabetes, fill = neighborhood)) + geom_col() +  
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
+  ggplot(aes(x = neighborhood,y = diabetes, fill = neighborhood)) + geom_col() +   
+  theme(axis.text.x = element_text(angle = 45, hjust = 1), 
+        legend.position = "none") +
   labs(title = "Neighborhood with 10 percent more diabetes rate")
 
 
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, stroke_hosp)) %>% 
   filter(stroke_hosp > 300) %>% 
-  ggplot(aes(x = neighborhood,y = stroke_hosp)) + geom_col() +  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  ggplot(aes(x = neighborhood,y = stroke_hosp, fill = neighborhood)) + geom_col() +  
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
+  ggplot(aes(x = neighborhood,y = stroke_hosp, fill = neighborhood)) + 
+  geom_col() +    
+  theme(axis.text.x = element_text(angle = 45, hjust = 1), 
+        legend.position = "none") +
   labs(title = "Neighborhood with 300 more stroke hospitalization in 100,000 adults")
 
 
@@ -187,7 +188,6 @@ health_only_neighborhood %>%
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, poverty)) %>% 
   filter(poverty > 20) %>% 
-  ggplot(aes(x = neighborhood,y = poverty)) + geom_col() +  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   ggplot(aes(x = neighborhood,y = poverty, fill = neighborhood)) + geom_col() +  
   theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
   labs(title = "Neighborhood with 20 percent or more poverty")
@@ -196,8 +196,8 @@ health_only_neighborhood %>%
 health_only_neighborhood %>%
   mutate(neighborhood = fct_reorder(neighborhood, age0to44_rate)) %>% 
   filter(age0to44_rate > 60) %>% 
-  ggplot(aes(x = neighborhood,y = age0to44_rate)) + geom_col() +  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  ggplot(aes(x = neighborhood,y = age0to44_rate, fill = neighborhood)) + geom_col() +  
+  ggplot(aes(x = neighborhood,y = age0to44_rate, fill = neighborhood)) + 
+  geom_col() +    
   theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "none") +
   labs(title = "Neighborhood with 60 percent or more people under age 44")
 
